[metadata]
name = omnilearn
description = 'A powerful machine learning suite built on top of pytorch using omni-ply'

license = MIT
author = Felix Leeb
author_email = felixludos@hotmail.com
url = https://github.com/felixludos/omni-learn

long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Programming Language :: Python :: 3.8

version = attr: omnilearn.__version__

[options]
packages = find:
install_requires =
    omnibelt>=0.8.8
    omnifig>=1.0.8
    omniply>=0.3.6
    tqdm>=4.65.0
    tabulate>=0.9.0

[options.extras_require]
test = pytest
